--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <label for="name">Name:</label>
             <input type="text" id="name" class="input" />
           </div>
-          <button onclick="generateCard()" class="button">Generate Card</button>
+          <button onclick="generateCard()" class="button">Push</button>
         </div>
       </section>
 
